retrieveUnpackaged/objects/TQB_Candidate_Package__c.object
<CustomObject>
    <description>Custom object that stores the Candidate&apos;s promotion package data and related fields.</description>
    <fields>
        <fullName>Candidate_Name__c</fullName>
        <description>Users first and last name for display on the Candidate Package</description>
        <formula>CreatedBy.FirstName &amp;&apos; &apos;  &amp; CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Users first and last name for display on the Candidate Package</inlineHelpText>
        <label>Candidate Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidates_1st_Line_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Candidate&apos;s 1st Line Supervisor name.</description>
        <inlineHelpText>The Candidate&apos;s 1st Line Supervisor name.</inlineHelpText>
        <label>Candidates 1st Line Supervisor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>X1st_Line_Supervisor_Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Candidate_Packages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Candidates_2nd_Line_Supervisor_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Candidates 2nd Line Supervisor Name.</description>
        <inlineHelpText>Candidates 2nd Line Supervisor Name.</inlineHelpText>
        <label>Candidates 2nd Line Supervisor Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>X2nd_Line_Supervisor_Role</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Candidate_Packages1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Type__c</fullName>
        <defaultValue>&quot;Please choose a file type.&quot;</defaultValue>
        <description>The types of candidate documents that may be uploaded.</description>
        <label>File Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Curriculum Vitae</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Presentation</fullName>
                </value>
                <value>
                    <fullName>Recommendation</fullName>
                </value>
                <value>
                    <fullName>Reference</fullName>
                </value>
                <value>
                    <fullName>Report</fullName>
                </value>
                <value>
                    <fullName>Research Paper</fullName>
                </value>
                <value>
                    <fullName>White Paper</fullName>
                </value>
                <value>
                    <fullName>Work Product</fullName>
                </value>
                <value>
                    <fullName>Position Description</fullName>
                </value>
                <value>
                    <fullName>Recommendation Memo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reject_Reason__c</fullName>
        <label>Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Candidate does not meet length of employment requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet education requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet experience requirement.</fullName>
                </value>
                <value>
                    <fullName>Candidate does not meet promotion prerequisite.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average performance review.</fullName>
                </value>
                <value>
                    <fullName>Candidate received below average peer review.</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Status Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Candidate Package Statuses</description>
        <inlineHelpText>Candidate Package Statuses</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Approved By 1st Line Supervisor</fullName>
                </value>
                <value>
                    <fullName>Approved By 2nd Line Supervisor</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TQB_Chair_Person_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TQB Chair Person Name</description>
        <label>TQB Chair Person Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>TQB_CHAIR</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Candidate_Packages2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Panel_Member_1_Name__c</fullName>
        <description>Name of the Panel Member</description>
        <label>TQB Panel Member 1 Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TQB_Panel_Member_2_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TQB Panel Member 2 Name</description>
        <label>TQB Panel Member 2 Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>TQB_PANEL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Candidate_Packages4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TQB_Panel_Member_3_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>TQB Panel Member 3 Name</description>
        <label>TQB Panel Member 3 Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>TQB_PANEL</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TQB_Candidate_Packages5</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TQB Candidate Package</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Candidates_1st_Line_Supervisor_Name__c</columns>
        <columns>Candidates_2nd_Line_Supervisor_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Status__c</columns>
        <columns>Status_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CP-{000000000}</displayFormat>
        <label>Candidate Package Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TQB_Candidate_Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Candidate_package_status_to_submit</fullName>
        <active>false</active>
        <description>Candidate package should be submitted only after LOI status is approved</description>
        <errorConditionFormula>ISPICKVAL( Status__c , &quot;Submitted&quot;)&amp;&amp;  $ObjectType.TQB_Letter_of_Intent__c.Fields.Status__c  &lt;&gt; &quot;Approved&quot;</errorConditionFormula>
        <errorMessage>Candidate Package should be submitted only after LOI is Approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TQB_Force_File_Type_Selection</fullName>
        <active>true</active>
        <description>TQB Force File Type Selection on attachment screen.</description>
        <errorConditionFormula>ISPICKVAL( File_Type__c, &quot;None&quot;)</errorConditionFormula>
        <errorDisplayField>File_Type__c</errorDisplayField>
        <errorMessage>Please choose an attachment file content type.</errorMessage>
    </validationRules>
</CustomObject>